# BadDMG

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md
.github/workflows/: cmake-multi-platform.yml
src/: CMakeLists.txt  app.cc  app.hh  fps-counter.hh  sdl-main.cc  sdl.cc  sdl.hh
src/bdmg/: CMakeLists.txt  audio.cc  audio.hh  boot-rom.cc  boot-rom.hh  bus.cc  bus.hh  cartridge.cc  cartridge.hh  common.cc  common.hh  cpu.cc  cpu.hh  device.hh  high-ram.cc  high-ram.hh  interrupt.cc  interrupt.hh  joypad.cc  joypad.hh  pixel-processor.cc  pixel-processor.hh  serial.cc  serial.hh  timer.cc  timer.hh  work-ram.cc  work-ram.hh
